# MeasCompress

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  setup.cfg  setup.py
.github/workflows/: main.yml
src/MeasCompress/: MeasCompressGUI.py  __init__.py  bindings.cpp  hello.py
src/MeasCompress/cpp_src/: compressor.hpp  dependency.hpp  line.hpp
src/python_cpp_example/: CMakeLists.txt  __init__.py  bindings.cpp  hello.py
src/python_cpp_example/cpp_src/: math.hpp
tests/: test_compressor.py  test_cpp.py  test_dependency.py  test_math.py  test_python.py
tests/cpp/: CMakeLists.txt  test_compressor.cpp  test_dependency.cpp  test_line.cpp  test_math.cpp
