[metadata]  # FIXME
author= Klaus Happacher
author_email= k.happacher@gmail.com
version = 0.0
description =
long_description =
license = MIT

[options]
zip_safe = False
setup_requires= 
    pytest-runner>=5.3.0
tests_require=
    pytest>=6.2.3
install_requires =

[tool:pytest]
norecursedirs = extern/*
