[metadata]
author= Klaus Happacher
author_email= k.happacher@gmail.com
version = 0.0
description = compress measurements
license = MIT

[options]
zip_safe = False
setup_requires= 
    pytest-runner>=5.3.0
tests_require=
    pytest>=6.2.3
install_requires =
    numpy>=1.20.2

[tool:pytest]
norecursedirs = extern/*
